--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1125,7 +1125,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.5);
 		left: 4em;
 		opacity: 0.5;
-		position: absolute;
+		position: static;
 	}
 
 		#footer .icons {
